Added different colors for incoming and outgoing messages.

--- a/Messenger.csproj
+++ b/Messenger.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Forms\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MessageType.cs" />
     <Compile Include="Forms\RegisterForm.cs">
       <SubType>Form</SubType>
     </Compile>
